fixed errors for passing automatic verification